--- a/templates/index.html
+++ b/templates/index.html
@@ -3,19 +3,20 @@
 {% block content%}
 <body>
 
-    <h1 class="top-banner">My Notes</h1>
+    <h1 class="top-banner">Sticky Notes</h1>
 
     <div class="main-div">
         <form action="{{ url_for( 'index' )}}" method="POST">
 
             <h1>{{ message }}</h1>
 
-            <h2>Username</h2>
+            <h2>Login</h2>
             <input type="text" name="username" placeholder="Username">
-            
-            <h2>Password</h2>
+            <br>
+            <br>
             <input type="password" name="password" placeholder="Password">
-
+            <br>
+            <br>
             <button type="submit" class="button">Login</button>
 
             <p>Don't have an account?</p>
